--- a/app/views/components/_post_form.html.erb
+++ b/app/views/components/_post_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@postNew) do |f| %>
+<%= simple_form_for(@postNew) do |f| %>
+  <%= @errors %>
 
   <div class="form-inputs">
     <%= f.label :title %>
