--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,7 +5,11 @@
     <%= render 'header' %>
 
     <section class="dash-section">
-      Analytics
+      Analytics here
+      <br>
+      <br>
+      <br>
+      <a href="https://docs.google.com/document/d/1k3b3ifze7-Zjuv3ciMg75asyGgSCUEmfomeWvtpKLG4/edit">-> TODO List</a>
     </section>
   </section>
 </section>
