--- a/app/views/components/_truncated_list.html.erb
+++ b/app/views/components/_truncated_list.html.erb
@@ -1,13 +1,14 @@
 <% @posts.each do |post| %>
   <div class="post-item">
     <h3><%= post.title %></h3>
-    <p><%= raw(post.content).truncate(358) %></p>
+    <p><%= raw post.content.truncate(358) %></p>
     <p class="inline">Tags:</p>
     <% post.tag_arr.each do |tag| %>
       <%= link_to(tag.upcase, "#{tags_path}/#{tag.parameterize}") %>
     <% end %>
 
     <p class="block">By: <%= post.author.present? ? post.author : '- - - -' %></p>
+    <p><%= post.updated_at.localtime.strftime("%m-%d-%y") %></p>
     <% if user_signed_in? %>
       <p>Category: <%= post.category %></p>
       <div class="post-options">
